Fixed flex wrap for images. Forgot to add </div>

--- a/src/components/works/works.css
+++ b/src/components/works/works.css
@@ -1,7 +1,7 @@
 .works {
     background-color: white;
     display: flex;
-    height: 90vh;
+    height: 100vh;
     width: 100vw;
     flex-direction: column;
     align-items: center;
@@ -35,7 +35,7 @@
 
 /* Work example images and font styles */
 .workcontainer {
-    width: 100%;
+    width: 70%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -54,6 +54,7 @@
     color: white;
     position: relative;
     transition: all .5s ease;
+    cursor: pointer;
 }
 
 .example1:hover {
